--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,36 @@
 @import "main-header";
+@import "page__body";
+
+
+
+@font-face {
+  font-family: "Oswald";
+  font-style: medium;
+  font-weight: 400;
+  src: url("fonts/oswaldmedium.woff") format("woff");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Oswald";
+  font-style: medium;
+  font-weight: 700;
+  src: url("fonts/oswaldmedium.woff2") format("woff2");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Oswald";
+  font-style: regular;
+  font-weight: 400;
+  src: url("fonts/oswaldregular.woff") format("woff");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Oswald";
+  font-style: regular;
+  font-weight: 700;
+  src: url("fonts/oswaldregular.woff2") format("woff2");
+  font-display: swap;
+}
