Прописала стили для main-header

--- a/source/less/main-header.less
+++ b/source/less/main-header.less
@@ -1,5 +1,5 @@
 .main-header {
-  background-color: #ffffff;
+  min-height: 65px;
   margin: 10px 20px 17px 20px;
   display: flex;
   justify-content: space-between;
