описание базовых стилей для блока catalog-program

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,7 +2,10 @@
 @import "page__body";
 /*@import "visually-hidden";*/
 @import "promo";
-
+@import "catalog-program";
+@import "advantages";
+@import "live-example";
+@import "footer";
 
 
 
