описание базовых стилей для блока live-example

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,6 @@
 @import "main-header";
 @import "page__body";
-/*@import "visually-hidden";*/
+@import "visually-hidden";
 @import "promo";
 @import "catalog-program";
 @import "advantages";
