описание базовых стилей для блока footer

--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -1,5 +1,5 @@
-.promo {
-  color: #ffffff;
+.promo__wrapper {
+  padding: 37px 20px 0 20px;
 }
 
 .promo__wrapper-background {
@@ -8,11 +8,9 @@
   background-position: top;
   background-size: cover;
   padding: 27px 35px 164px 35px;
-  margin-bottom: 178px;
-}
+  margin: -27px -20px 0 -20px;
+  color: #ffffff;
 
-.promo__wrapper {
-  position: relative;
 }
 
 .promo__title {
@@ -36,16 +34,12 @@
 }
 
 .promo__image {
-  position: absolute;
-  width: 280px;
-  height: 270px;
-  left: 20px;
-  top: 167px;
+
 }
 
 .promo__button-choose-program {
-  margin: 0 20px 0 20px;
-  width: 100%;
+  box-sizing: border-box;
+  min-width: 280px;
   min-height: 40px;
   background-color: rgba(104, 183, 56, 1);
   border: 0;
