описание базовых стилей для блока каталога с основными товарами

--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -10,7 +10,6 @@
   padding: 27px 35px 164px 35px;
   margin: -27px -20px 0 -20px;
   color: #ffffff;
-
 }
 
 .promo__title {
@@ -39,7 +38,7 @@
 
 .promo__button-choose-program {
   box-sizing: border-box;
-  min-width: 280px;
+  width: 100%;
   min-height: 40px;
   background-color: rgba(104, 183, 56, 1);
   border: 0;
