--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,6 +4,7 @@
 @desktop-width: 1200px;
 @mobile-width-only: 767px;
 
+/*главная страница*/
 @import "main-header";
 @import "visually-hidden";
 @import "promo";
@@ -12,6 +13,12 @@
 @import "live-example";
 @import "footer";
 
+/*страница каталога*/
+@import "catalog-product-cards";
+@import "additional-products";
+
+/*формы*/
+@import "program-selection";
 
 /*шрифты*/
 @font-face {
