описание базовых стилей для блока каталога с доп товарами

--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -6,6 +6,10 @@
   background-color: #ffffff;
 }
 
+.footer__collaboration--catalog {
+  background: rgba(242, 242, 242, 1);
+}
+
 .collaboration__wrapper {
   padding: 26px 20px;
 }
