--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -3,7 +3,8 @@
 }
 
 .promo__wrapper-background {
-  background: linear-gradient(to right, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/index-background-desktop-mobile.jpg");
+  background: linear-gradient(to right, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+  url("../img/index-background-desktop-mobile.jpg");
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
