--- a/source/less/main-header.less
+++ b/source/less/main-header.less
@@ -4,3 +4,33 @@
   display: flex;
   justify-content: space-between;
 }
+
+.main-header__nav {
+  width: 100%;
+}
+
+.main-nav__list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.main-nav__item {
+  margin: 0;
+
+  width: 100%;
+}
+
+.main-nav__item a {
+  display: block;
+  cursor: pointer;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 20px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #000000;
+  min-height: 66px;
+  text-align: center;
+  padding: 22px 0 24px 0;
+}
