стили для стриницы форм

--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -10,6 +10,10 @@
   background: rgba(242, 242, 242, 1);
 }
 
+.footer__collaboration--form {
+  background: rgba(242, 242, 242, 1);
+}
+
 .collaboration__wrapper {
   padding: 26px 20px;
 }
