изменения стилей для __wrapper

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,7 +6,6 @@
 
 /*главная страница*/
 @import "main-header";
-@import "visually-hidden";
 @import "promo";
 @import "catalog-program";
 @import "advantages";
@@ -58,3 +57,15 @@ img {
   background-color: #ffffff;
   color: #000000;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
