создала отдельные файлы для блоков в index.html

--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -1,4 +1,4 @@
-.footer {
+.footer__wrapper {
   background-color: rgba(242, 242, 242, 1);
 }
 
@@ -12,29 +12,6 @@
 
 .footer__collaboration--form {
   background: rgba(242, 242, 242, 1);
-}
-
-.collaboration__wrapper {
-  padding: 26px 20px;
-}
-
-.collaboration__title {
-  margin: 0;
-  font-family: inherit;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-  text-transform: uppercase;
-  color: #111111;
-}
-
-.collaboration__address {
-  margin: 0;
-  font-family: "Arial", sans-serif;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 20px;
-  color: #444444;
 }
 
 .footer__logo {
@@ -56,15 +33,4 @@
 .footer__copyright {
   display: flex;
   padding-bottom: 32px;
-}
-
-.copyright__link {
-  margin: 0;
-  cursor: pointer;
-  font-family: "Arial", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 18px;
-  color: #444444;
-
 }
