--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,6 +5,8 @@
 @mobile-width-only: 767px;
 
 /*главная страница*/
+@import "utils/fonts.less";
+@import "utils/global.less";
 @import "main-header";
 @import "promo";
 @import "catalog-program";
