--- a/source/less/advantages.less
+++ b/source/less/advantages.less
@@ -5,7 +5,6 @@
 
 .advantages__title {
   margin: 0;
-  margin-bottom: 16px;
   font-family: inherit;
   font-weight: 400;
   font-size: 36px;
@@ -17,10 +16,10 @@
 .advantages__list {
   list-style-type: none;
   padding: 0 0 0 80px;
-  margin: 42px 0 0 0;
+  margin: 40px 0 49px 0;
 }
 
-.advantage__description {
+.advantages__description {
   font-family: "Arial", sans-serif;
   font-weight: 400;
   font-size: 14px;
