создала отдельные файлы для блоков в каталоге

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,7 +4,7 @@
 @desktop-width: 1200px;
 @mobile-width-only: 767px;
 
-/*главная страница*/
+//главная страница
 @import "utils/fonts.less";
 @import "utils/global.less";
 @import "main-header";
@@ -12,12 +12,19 @@
 @import "catalog-program";
 @import "advantages";
 @import "live-example";
+@import "range-bar";
+@import "module";
+@import "collaboration";
 @import "footer";
+@import "copyright";
 
-/*страница каталога*/
+//страница каталога
 @import "catalog-product-cards";
+@import "product-card";
+@import "all-catalog";
 @import "additional-products";
 
-/*формы*/
+
+//формы
 @import "program-selection";
 
