создала отдельные файлы блоков для страницы форм

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -27,4 +27,10 @@
 
 //формы
 @import "program-selection";
+@import "questionnaire";
+@import "cat-data";
+@import "purpose-program";
+@import "contact";
+@import "comment";
+@import "additionally";
 
