--- a/source/less/additional-products.less
+++ b/source/less/additional-products.less
@@ -49,7 +49,7 @@
   box-sizing: border-box;
   width: 100%;
   min-height: 40px;
-  background-color: rgba(104, 183, 56, 1);;
+  background-color: rgba(104, 183, 56, 1);
   font-family: inherit;
   font-weight: 400;
   font-size: 16px;
@@ -60,8 +60,7 @@
 }
 
 .additional-products__bonus {
-  background: linear-gradient(to right, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
-  url("../img/background-bonus.jpg");
+  background: linear-gradient(to right, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/background-bonus.jpg");
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
