--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -1,10 +1,9 @@
 .promo__wrapper {
-  padding: 37px 20px 0 20px;
+  padding: 27px 20px 0 20px;
 }
 
 .promo__wrapper-background {
-  background: linear-gradient(to right, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
-  url("../img/index-background-desktop-mobile.jpg");
+  background: linear-gradient(to right, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/index-background-desktop-mobile.jpg");
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
@@ -15,12 +14,12 @@
 
 .promo__title {
   margin: 0;
+  margin-bottom: 25px;
   font-family: inherit;
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
   text-align: center;
-  margin-bottom: 25px;
 }
 
 .promo__subtitle {
@@ -33,16 +32,12 @@
   text-align: center;
 }
 
-.promo__image {
-
-}
-
 .promo__button-choose-program {
   box-sizing: border-box;
   width: 100%;
   min-height: 40px;
-  background-color: rgba(104, 183, 56, 1);
   border: 0;
+  background-color: rgba(104, 183, 56, 1);
   font-family: inherit;
   padding: 7px 44px;
   font-size: 14px;
@@ -51,4 +46,38 @@
   text-align: center;
   color: #ffffff;
   text-transform: uppercase;
+}
+
+@media (min-width: @tablet-width) {
+  .promo__wrapper {
+    padding: 60px 120px 0 120px;
+
+    .promo__wrapper-background {
+      background: #ffffff;
+      color: #000000;
+      margin: 0;
+      padding: 0;
+
+
+      .promo__title {
+        text-align: left;
+        font-size: 60px;
+        font-weight: 400;
+        line-height: 60px;
+        letter-spacing: 0;
+      }
+
+      .promo__subtitle {
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 20px;
+        letter-spacing: 0;
+        text-align: left;
+      }
+    }
+
+    .promo__image {
+      width: 100%;
+    }
+  }
 }
