Блог catalog-program, стили для разных медиа запросов

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,6 +5,7 @@
 //главная страница
 @import "utils/fonts.less";
 @import "utils/global.less";
+@import "utils/variables.less";
 @import "main-header";
 @import "promo";
 @import "catalog-program";
