--- a/source/less/catalog-program.less
+++ b/source/less/catalog-program.less
@@ -15,6 +15,45 @@
   margin-bottom: 20px;
 }
 
+.catalog-program__item::before {
+  content: "";
+  position: absolute;
+  background-color: @basic-green;
+  top: 24px;
+  left: 22px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.catalog-program__item--cat-slim {
+  position: relative;
+}
+
+.catalog-program__item--cat-pro {
+  position: relative;
+}
+
+.catalog-program__item--cat-slim::after {
+  content: "";
+  position: absolute;
+  width: 36px;
+  height: 50px;
+  top: 21px;
+  left: 29px;
+  background-image: url("../img/cat-slim.svg");
+}
+
+.catalog-program__item--cat-pro::after {
+  content: "";
+  position: absolute;
+  width: 67px;
+  height: 28px;
+  top: 35px;
+  left: 12px;
+  background-image: url("../img/cat-pro.svg");
+}
+
 .catalog-program__title {
   margin: 0 0 29px 0;
   font-family: inherit;
@@ -36,6 +75,7 @@
 }
 
 .catalog-program__toggle {
+  position: relative;
   cursor: pointer;
   font-family: inherit;
   font-weight: 400;
@@ -45,4 +85,171 @@
   text-transform: uppercase;
   color: #000000;
   text-decoration: none;
+}
+
+.catalog-program__toggle::before {
+  content: "";
+  position: absolute;
+  width: 24px;
+  height: 12px;
+  top: 6px;
+  left: 100px;
+  background-image: url("../img/arrow.svg");
+}
+//ПЛАНШЕТ
+@media (min-width: @tablet-width) {
+  .catalog-program__wrapper {
+    padding: 0 30px;
+    background-color: #ffffff;
+  }
+
+  .catalog-program__item {
+    padding: 77px 53px 57px 53px;
+    margin-bottom: 30px;
+  }
+
+  .catalog-program__item::before {
+    content: "";
+    position: absolute;
+    background-color: @basic-green;
+    top: 90px;
+    right: 60px;
+    left: auto;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+  }
+
+  .catalog-program__item--cat-slim::after {
+    content: "";
+    position: absolute;
+    width: 140px;
+    height: 194px;
+    top: 81px;
+    left: auto;
+    right: 92px;
+    background-image: url("../img/cat-slim.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .catalog-program__item--cat-pro::after {
+    content: "";
+    position: absolute;
+    width: 268px;
+    height: 112px;
+    top: 135px;
+    left: auto;
+    right: 28px;
+    background-image: url("../img/cat-pro.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .catalog-program__title {
+    font-size: 36px;
+    line-height: 36px;
+    text-align: left;
+  }
+
+  .catalog-program__text {
+    margin: 24px 316px 52px 0;
+    font-size: 16px;
+    line-height: 24px;
+    color: #000000;
+  }
+
+  .catalog-program__toggle {
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  .catalog-program__toggle::before {
+    content: "";
+    position: absolute;
+    width: 24px;
+    height: 12px;
+    top: 10px;
+    left: 133px;
+    background-image: url("../img/arrow.svg");
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .catalog-program__wrapper {
+    padding: 82px 110px 73px 110px;
+  }
+
+  .catalog-program__list {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .catalog-program__item {
+    flex: 1;
+  }
+
+  .catalog-program__item:not(:last-child) {
+    margin-right: 80px;
+  }
+
+  .catalog-program__item::before {
+    content: "";
+    position: absolute;
+    background-color: @basic-green;
+    top: 47px;
+    left: 52px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  }
+
+  .catalog-program__item--cat-slim::after {
+    content: "";
+    position: absolute;
+    width: 70px;
+    height: 97px;
+    top: 41px;
+    left: 67px;
+    background-image: url("../img/cat-slim.svg");
+  }
+
+  .catalog-program__item--cat-pro::after {
+    content: "";
+    position: absolute;
+    width: 134px;
+    height: 56px;
+    top: 67px;
+    left: 33px;
+    background-image: url("../img/cat-pro.svg");
+  }
+
+  .catalog-program__title {
+    margin: 0 0 73px 0;
+    font-size: 36px;
+    line-height: 36px;
+    text-align: center;
+  }
+
+  .catalog-program__text {
+    margin: 0 0 27px 0;
+    font-size: 16px;
+    line-height: 24px;
+    color: #000000;
+  }
+
+  .catalog-program__toggle {
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  .catalog-program__toggle::before {
+    content: "";
+    position: absolute;
+    width: 24px;
+    height: 12px;
+    top: 9px;
+    left: 136px;
+    background-image: url("../img/arrow.svg");
+  }
 }
