адаптивная сетка для блока живой пример

--- a/source/less/module.less
+++ b/source/less/module.less
@@ -15,3 +15,35 @@
   text-align: center;
   color: #444444;
 }
+
+.module__text--result {
+  font-size: 14px;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.module__description {
+  display: flex;
+}
+
+.module__description--result {
+  margin-top: 20px;
+}
+
+.module__description:not(:last-child) {
+  flex-direction: column;
+  border: 1px solid #cdcdcd;
+  box-sizing: border-box;
+  padding-top: 14px;
+  border-radius: 3px;
+  min-width: 124px;
+}
+
+.module__text {
+  margin-top: 15px;
+  margin-bottom: -14px;
+}
+
+.module__description:first-child {
+  margin-right: 32px;
+}
