--- a/source/less/live-example.less
+++ b/source/less/live-example.less
@@ -31,3 +31,67 @@
   text-transform: uppercase;
   color: #000000;
 }
+
+.live-example__price {
+  margin-top: 20px;
+  margin-bottom: 40px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.live-example__statistic {
+  display: flex;
+}
+
+@media (min-width: @tablet-width) {
+  .live-example__wrapper {
+    background-color: #ffffff;
+    padding: 43px 30px;
+  }
+
+  .live-example__wrapper--tablet {
+    background-color: rgba(234, 234, 234, 1);
+  }
+
+  .live-example__title {
+    font-size: 60px;
+    line-height: 60px;
+  }
+
+  .live-example__text {
+    margin: 63px 0 54px 0;
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .live-example__wrapper {
+    background-color: #ffffff;
+    padding: 0;
+  }
+
+  .live-example__wrapper--desktop {
+    background-color: rgba(242, 242, 242, 1);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .live-example__wrapper--tablet {
+    background-color: rgba(242, 242, 242, 1);
+  }
+
+  .live-example__title {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 76px;
+  }
+
+  .live-example__text {
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+
+
+}
