--- a/source/less/style.less
+++ b/source/less/style.less
@@ -16,6 +16,7 @@
 @import "collaboration";
 @import "footer";
 @import "copyright";
+@import "footer-social";
 
 //страница каталога
 @import "catalog-product-cards";
