--- a/source/less/collaboration.less
+++ b/source/less/collaboration.less
@@ -20,3 +20,8 @@
   line-height: 20px;
   color: #444444;
 }
+
+.collaboration__invitation {
+  display: flex;
+  justify-content: space-between;
+}
