адаптивная сеткa для футера desktop

--- a/source/less/collaboration.less
+++ b/source/less/collaboration.less
@@ -25,3 +25,19 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media (min-width: @tablet-width) {
+  .collaboration__wrapper {
+    padding: 0;
+  }
+
+  .collaboration__invitation {
+    padding: 55px 60px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .collaboration__invitation {
+    padding: 60px 80px 55px 80px;
+  }
+}
