--- a/source/less/copyright.less
+++ b/source/less/copyright.less
@@ -8,3 +8,11 @@
   color: #444444;
   text-decoration: none;
 }
+
+@media (min-width: @tablet-width) {
+  .copyright__link {
+    margin-right: 22px;
+    align-items: center;
+    display: flex;
+  }
+}
