--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -27,14 +27,6 @@
   padding: 3px 4px 2px 2px;
 }
 
-.footer__social-list {
-  display: flex;
-  justify-content: center;
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-}
-
 .footer__copyright {
   display: flex;
   padding: 28px 20px;
@@ -43,17 +35,22 @@
 }
 
 @media (min-width: @tablet-width) {
-
+  .footer__contacts {
+    display: flex;
+    padding: 60px 30px;
+    justify-content: space-between;
+    align-items: center;
+  }
 
   .footer__logo {
-    margin-top: 39px;
-    margin-bottom: 53px;
+    margin: 0;
+    padding: 0;
     text-align: center;
   }
 
   .footer__social {
-    margin-bottom: 49px;
-    padding: 3px 4px 2px 2px;
+    margin: 0;
+    padding: 0;
   }
 
   .footer__social-list {
@@ -62,9 +59,38 @@
   }
 
   .footer__copyright {
+    margin: 0;
+    padding: 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .footer__contacts {
     display: flex;
-    padding-bottom: 32px;
+    padding: 60px 110px;
+    justify-content: space-between;
+    align-items: center;
   }
 
+  .footer__logo {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
 
+  .footer__social {
+    margin: 0;
+    padding: 0;
+  }
+
+  .footer__social-list {
+    margin: 0;
+    list-style-type: none;
+  }
+
+  .footer__copyright {
+    margin: 0;
+    padding: 0;
+  }
 }
+
