--- a/source/less/live-example.less
+++ b/source/less/live-example.less
@@ -46,7 +46,7 @@
 @media (min-width: @tablet-width) {
   .live-example__wrapper {
     background-color: #ffffff;
-    padding: 43px 30px;
+    padding: 0;
   }
 
   .live-example__wrapper--tablet {
@@ -91,7 +91,4 @@
     font-size: 16px;
     line-height: 24px;
   }
-
-
-
 }
