--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -34,7 +34,7 @@
 
 .promo__button-choose-program {
   box-sizing: border-box;
-  width: 100%;
+  min-width: 100%;
   min-height: 40px;
   border: 0;
   background-color: rgba(104, 183, 56, 1);
@@ -50,7 +50,11 @@
 
 @media (min-width: @tablet-width) {
   .promo__wrapper {
-    padding: 60px 120px 0 120px;
+    padding: 0;
+  }
+
+  .promo__wrapper-tablet {
+    padding: 62px 120px 20px 120px;
   }
 
   .promo__wrapper-background {
@@ -64,23 +68,40 @@
   .promo__title {
     text-align: left;
     font-size: 60px;
-    font-weight: 400;
     line-height: 60px;
-    letter-spacing: 0;
+    margin-bottom: 40px;
   }
 
   .promo__subtitle {
     font-size: 20px;
-    font-weight: 400;
     line-height: 20px;
-    letter-spacing: 0;
     text-align: left;
   }
 
 
   .promo__image {
-    width: 100%;
+    display: none;
   }
+
+  .promo__button-choose-program {
+    min-width: 244px;
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .promo__button-wrapper {
+    padding: 30px 90px 550px 90px;
+    margin: 0 30px 0 30px;
+    background-image: url("../img/promo-cat-energy.png");
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+}
+
+@media (min-width: @desktop-width) {
+
+
 }
 
 
