адаптивная шапка tablet

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,6 +7,7 @@
 @import "utils/global.less";
 @import "utils/variables.less";
 @import "main-header";
+@import "main-nav";
 @import "promo";
 @import "catalog-program";
 @import "advantages";
@@ -17,6 +18,7 @@
 @import "footer";
 @import "copyright";
 @import "footer-social";
+@import "logotype";
 
 //страница каталога
 @import "catalog-product-cards";
