--- a/source/less/main-header.less
+++ b/source/less/main-header.less
@@ -1,26 +1,34 @@
-.main-header {
+.main-header__wrapper {
   padding: 10px 20px 15px 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.main-header__logo-cat-energy {
-  height: 18px;
+.main-header__nav {
+  display: none;
 }
 
 @media (min-width: @tablet-width) {
+  .main-header__wrapper {
+    padding: 24px 30px 0 30px;
+  }
+
   .main-header__logo-cat-energy {
-    width: 174px;
-    height: 18px;
+    display: none;
+  }
+
+  .main-nav__toggle {
+    display: none;
+  }
+
+  .main-header__nav {
+    display: block;
   }
 
 }
 
 @media (min-width: @desktop-width) {
-  .main-header__logo-cat-energy {
-    width: 202px;
-    height: 18px;
-  }
+
 
 }
