--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -1,4 +1,3 @@
-/*
 .main-nav {
   width: 100%;
 }
@@ -27,4 +26,37 @@
   min-height: 66px;
   text-align: center;
   padding: 22px 0 24px 0;
-}*/
+}
+
+@media (min-width: @tablet-width) {
+  .main-nav {
+    min-width: 440px;
+    width: auto;
+  }
+
+  .main-nav__list {
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    justify-content: space-between;
+  }
+
+  .main-nav__item {
+    width: auto;
+  }
+
+  .main-nav__item a {
+    font-size: 18px;
+    line-height: 24px;
+    min-height: auto;
+    text-align: center;
+    padding: 0;
+  }
+
+}
+
+
+@media (min-width: @desktop-width) {
+
+}
