адаптивная шапка dekstop

--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -53,10 +53,16 @@
     text-align: center;
     padding: 0;
   }
-
 }
 
-
 @media (min-width: @desktop-width) {
+  .main-nav {
+    min-width: 480px;
+  }
 
+  .main-nav__item a {
+    font-size: 20px;
+    line-height: 30px;
+    color: #ffffff;
+  }
 }
