--- a/source/less/main-header.less
+++ b/source/less/main-header.less
@@ -25,10 +25,13 @@
   .main-header__nav {
     display: block;
   }
-
 }
 
 @media (min-width: @desktop-width) {
+  .main-header__wrapper {
+    padding: 53px 110px 0 110px;
+  }
+
 
 
 }
