заменила цвета в css на переменные less

--- a/source/less/additional-products.less
+++ b/source/less/additional-products.less
@@ -1,6 +1,6 @@
 .additional-products__wrapper {
   padding: 25px 20px 35px 20px;
-  background-color: #ffffff;
+  background-color: @white;
 }
 
 .additional-products__title {
@@ -10,7 +10,7 @@
   font-size: 24px;
   line-height: 24px;
   text-align: center;
-  color: #000000;
+  color: @black;
 }
 
 .additional-products__cards {
@@ -32,7 +32,7 @@
   font-size: 16px;
   line-height: 16px;
   text-transform: uppercase;
-  color: #222222;
+  color: @dark-grey;
 }
 
 .additional-products__info-card {
@@ -40,7 +40,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  color: #444444;
+  color: @text-grey;
 }
 
 .additional-products__buy-card {
@@ -49,14 +49,14 @@
   box-sizing: border-box;
   width: 100%;
   min-height: 40px;
-  background-color: rgba(104, 183, 56, 1);
+  background-color: @basic-green;
   font-family: inherit;
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
-  color: #ffffff;
+  color: @white;
 }
 
 .additional-products__bonus {
@@ -73,5 +73,5 @@
   font-size: 16px;
   line-height: 20px;
   text-align: center;
-  color: #ffffff;
+  color: @white;
 }
