--- a/source/less/cat-data.less
+++ b/source/less/cat-data.less
@@ -9,7 +9,7 @@
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
-  color: #444444;
+  color: @text-grey;
 }
 
 .cat-data__name-form {
@@ -23,5 +23,5 @@
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
-  color: #444444;
+  color: @text-grey;
 }
