--- a/source/less/catalog-product-cards.less
+++ b/source/less/catalog-product-cards.less
@@ -1,6 +1,6 @@
 .catalog-product-cards__wrapper {
   padding: 27px 20px 0 20px;
-  background-color: #ffffff;
+  background-color: @white;
 }
 
 .catalog-product-cards__title {
@@ -9,7 +9,7 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
-  color: #000000;
+  color: @black;
   margin-bottom: 41px;
 }
 
