--- a/source/less/catalog-program.less
+++ b/source/less/catalog-program.less
@@ -1,6 +1,6 @@
 .catalog-program__wrapper {
   padding: 20px;
-  background-color: #ffffff;
+  background-color: @white;
 }
 
 .catalog-program__list {
@@ -61,7 +61,7 @@
   font-size: 24px;
   line-height: 37px;
   text-transform: uppercase;
-  color: #000000;
+  color: @black;
   text-align: center;
 }
 
@@ -71,7 +71,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
-  color: #444444;
+  color: @text-grey;
 }
 
 .catalog-program__toggle {
@@ -83,7 +83,7 @@
   line-height: 16px;
   text-align: center;
   text-transform: uppercase;
-  color: #000000;
+  color: @black;
   text-decoration: none;
 }
 
@@ -155,7 +155,7 @@
     margin: 24px 316px 52px 0;
     font-size: 16px;
     line-height: 24px;
-    color: #000000;
+    color: @black;
   }
 
   .catalog-program__toggle {
@@ -234,7 +234,7 @@
     margin: 0 0 27px 0;
     font-size: 16px;
     line-height: 24px;
-    color: #000000;
+    color: @black;
   }
 
   .catalog-program__toggle {
