--- a/source/less/live-example.less
+++ b/source/less/live-example.less
@@ -10,7 +10,7 @@
   font-size: 36px;
   line-height: 40px;
   text-align: left;
-  color: #000000;
+  color: @black;
 }
 
 .live-example__text {
@@ -19,7 +19,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
-  color: #444444;
+  color: @text-grey;
 }
 
 .live-example__price {
@@ -29,7 +29,7 @@
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
-  color: #000000;
+  color: @black;
 }
 
 .live-example__price {
@@ -45,7 +45,7 @@
 
 @media (min-width: @tablet-width) {
   .live-example__wrapper {
-    background-color: #ffffff;
+    background-color: @white;
     padding: 0;
   }
 
@@ -67,7 +67,7 @@
 
 @media (min-width: @desktop-width) {
   .live-example__wrapper {
-    background-color: #ffffff;
+    background-color: @white;
     padding: 0;
   }
 
