--- a/source/less/main-nav.less
+++ b/source/less/main-nav.less
@@ -22,7 +22,7 @@
   line-height: 20px;
   text-transform: uppercase;
   text-decoration: none;
-  color: #000000;
+  color: @black;
   min-height: 66px;
   text-align: center;
   padding: 22px 0 24px 0;
@@ -63,6 +63,6 @@
   .main-nav__item a {
     font-size: 20px;
     line-height: 30px;
-    color: #ffffff;
+    color: @white;
   }
 }
