--- a/source/less/module.less
+++ b/source/less/module.less
@@ -4,7 +4,7 @@
   font-size: 24px;
   line-height: 24px;
   text-align: center;
-  color: #000000;
+  color: @black;
 }
 
 .module__text {
@@ -13,7 +13,7 @@
   font-size: 12px;
   line-height: 100%;
   text-align: center;
-  color: #444444;
+  color: @text-grey;
 }
 
 .module__text--result {
