--- a/source/less/product-card.less
+++ b/source/less/product-card.less
@@ -9,7 +9,7 @@
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
-  color: #222222;
+  color: @dark-grey;
 }
 
 .product-card__details {
@@ -17,7 +17,7 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 16px;
-  color: #444444;
+  color: @text-grey;
 }
 
 .product-card__button-order {
@@ -28,7 +28,7 @@
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
-  color: #ffffff;
+  color: @white;
   background-color: rgba(104, 183, 56, 1);
   min-height: 40px;
   width: 100%;
