--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -9,7 +9,7 @@
   background-size: cover;
   padding: 27px 35px 164px 35px;
   margin: -27px -20px 0 -20px;
-  color: #ffffff;
+  color: @white;
 }
 
 .promo__title {
@@ -37,14 +37,14 @@
   min-width: 100%;
   min-height: 40px;
   border: 0;
-  background-color: rgba(104, 183, 56, 1);
+  background-color: @basic-green;
   font-family: inherit;
   padding: 7px 44px;
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
   text-align: center;
-  color: #ffffff;
+  color: @white;
   text-transform: uppercase;
 }
 
@@ -58,8 +58,8 @@
   }
 
   .promo__wrapper-background {
-    background: #ffffff;
-    color: #000000;
+    background-color: @black;
+    color: @white;
     margin: 0;
     padding: 0;
   }
@@ -111,8 +111,8 @@
   }
 
   .promo__wrapper-background {
-    background: #ffffff;
-    color: #000000;
+    background-color: @white;
+    color: @black;
     margin: 0;
     padding: 0;
   }
