--- a/source/less/questionnaire.less
+++ b/source/less/questionnaire.less
@@ -31,7 +31,7 @@
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
-  color: #ffffff;
+  color: @white;
   margin-bottom: 21px;
 }
 
@@ -42,5 +42,5 @@
   font-size: 14px;
   line-height: 16px;
   text-align: center;
-  color: #000000;
+  color: @black;
 }
