--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,7 +1,8 @@
 //главная страница
 @import "utils/fonts.less";
 @import "utils/global.less";
-@import "utils/variables.less";
+@import "utils/colors.less";
+@import "utils/constants.less";
 @import "main-header";
 @import "main-nav";
 @import "promo";
