--- a/source/less/utils/global.less
+++ b/source/less/utils/global.less
@@ -14,8 +14,8 @@ img {
   box-sizing: border-box;
   min-height: 100%;
   margin: 0 auto;
-  background-color: #ffffff;
-  color: #000000;
+  background-color: @white;
+  color: @black;
 }
 
 .visually-hidden {
