--- a/source/less/additionally.less
+++ b/source/less/additionally.less
@@ -7,7 +7,7 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 26px;
-  color: #000000;
+  color: @black;
   margin-bottom: 34px;
 }
 
@@ -25,5 +25,5 @@
   line-height: 18px;
   align-items: center;
   text-transform: uppercase;
-  color: #000000;
+  color: @black;
 }
