--- a/source/less/advantages.less
+++ b/source/less/advantages.less
@@ -1,6 +1,6 @@
 .advantages__wrapper {
   padding: 0 21px;
-  background-color: #ffffff;
+  background-color: @white;
 }
 
 .advantages__title {
@@ -10,7 +10,7 @@
   font-size: 36px;
   line-height: 40px;
   text-align: left;
-  color: #000000;
+  color: @black;
 }
 
 .advantages__list {
@@ -25,7 +25,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
-  color: #444444;
+  color: @text-grey;
   margin: 26px 0 0 0;
 }
 
