--- a/source/less/all-catalog.less
+++ b/source/less/all-catalog.less
@@ -16,7 +16,7 @@
   font-size: 12px;
   line-height: 16px;
   text-align: center;
-  color: #444444;
+  color: @text-grey;
 }
 
 .all-catalog__button {
@@ -32,5 +32,5 @@
   line-height: 20px;
   text-align: center;
   text-transform: uppercase;
-  color: #444444;
+  color: @text-grey;
 }
