--- a/source/less/collaboration.less
+++ b/source/less/collaboration.less
@@ -18,7 +18,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  color: #444444;
+  color: @text-grey;
 }
 
 .collaboration__invitation {
