--- a/source/less/comment.less
+++ b/source/less/comment.less
@@ -5,7 +5,7 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 26px;
-  color: #000000;
+  color: @black;
 }
 
 .comment__skill-cat-form {
@@ -14,7 +14,7 @@
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
-  color: #444444;
+  color: @text-grey;
   border: 1px solid #e7e7e7;
   box-sizing: border-box;
   padding: 10px 12px;
