--- a/source/less/contact.less
+++ b/source/less/contact.less
@@ -4,7 +4,7 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 26px;
-  color: #000000;
+  color: @black;
   margin-bottom: 35px;
 }
 
@@ -24,7 +24,7 @@
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
-  color: #444444;
+  color: @text-grey;
 }
 
 .contact__input {
@@ -33,5 +33,5 @@
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
-  color: #444444;
+  color: @text-grey;
 }
