--- a/source/less/copyright.less
+++ b/source/less/copyright.less
@@ -5,7 +5,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
-  color: #444444;
+  color: @text-grey;
   text-decoration: none;
 }
 
