--- a/source/less/program-selection.less
+++ b/source/less/program-selection.less
@@ -1,6 +1,6 @@
 .program-selection__wrapper {
   padding: 27px 20px 32px 20px;
-  background-color: #ffffff;
+  background-color: @white;
 }
 
 .program-selection__title {
@@ -8,7 +8,7 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
-  color: #000000;
+  color: @black;
   margin: 0;
 }
 
@@ -18,7 +18,7 @@
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
-  color: #000000;
+  color: @black;
   margin: 0;
   margin-top: 37px;
 }
