--- a/source/less/purpose-program.less
+++ b/source/less/purpose-program.less
@@ -15,7 +15,7 @@
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
-  color: #222222;
+  color: @dark-grey;
 }
 
 .purpose-program__item {
