создала блог reset-list

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -3,6 +3,7 @@
 @import "utils/global.less";
 @import "utils/colors.less";
 @import "utils/constants.less";
+@import "reset-list";
 @import "main-header";
 @import "main-nav";
 @import "promo";
