Карточки каталога на гридах

--- a/source/less/catalog-product-cards.less
+++ b/source/less/catalog-product-cards.less
@@ -14,9 +14,11 @@
 }
 
 .catalog-product-cards__list {
-  list-style-type: none;
-  margin: 0;
+  display: grid;
+  grid-template-columns: 1fr;
   padding: 19px 0 0 0;
+  grid-row-gap: 25px;
+  justify-content: center;
 }
 
 .catalog-product-cards__all-catalog {
