--- a/source/less/promo.less
+++ b/source/less/promo.less
@@ -58,12 +58,12 @@
   }
 
   .promo__wrapper-background {
-    background-color: @black;
-    color: @white;
+    background: none;
+    background-color: @white;
+    color: @black;
     margin: 0;
     padding: 0;
   }
-
 
   .promo__title {
     text-align: left;
@@ -77,7 +77,6 @@
     line-height: 20px;
     text-align: left;
   }
-
 
   .promo__image {
     display: none;
@@ -111,12 +110,12 @@
   }
 
   .promo__wrapper-background {
+    background: none;
     background-color: @white;
     color: @black;
     margin: 0;
     padding: 0;
   }
-
 
   .promo__title {
     text-align: left;
