--- a/source/less/catalog-product-cards.less
+++ b/source/less/catalog-product-cards.less
@@ -16,11 +16,33 @@
 .catalog-product-cards__list {
   display: grid;
   grid-template-columns: 1fr;
-  padding: 19px 0 0 0;
   grid-row-gap: 25px;
   justify-content: center;
 }
 
 .catalog-product-cards__all-catalog {
   padding: 78px 20px 25px 20px;
+}
+
+@media (min-width: @tablet-width) {
+  .catalog-product-cards__wrapper {
+    padding: 75px 30px 65px 30px;
+  }
+
+  .catalog-product-cards__title {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 160px;
+  }
+
+  .catalog-product-cards__list {
+    grid-template-columns: 1fr 1fr;
+    grid-row-gap: 140px;
+    grid-column-gap: 60px;
+    justify-content: center;
+  }
+
+  .catalog-product-cards__all-catalog {
+    padding: 0;
+  }
 }
