карточки товаров desktop

--- a/source/less/additional-products.less
+++ b/source/less/additional-products.less
@@ -125,5 +125,41 @@
 }
 
 @media (min-width: @desktop-width) {
+  .additional-products__wrapper {
+    padding: 0 110px 86px 110px;
+    background-color: @white;
+  }
 
-}
+  .additional-products__title {
+    font-size: 36px;
+    line-height: 36px;
+    text-align: left;
+  }
+
+  .additional-products__cards {
+    margin: 70px 0;
+    grid-row-gap: 0;
+  }
+
+  .additional-products__item {
+    display: grid;
+    align-items: center;
+    margin: 0;
+  }
+
+  .additional-products__buy-card {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .additional-products__bonus {
+    background-size: cover;
+    padding: 70px 124px 70px 422px;
+    background-position: center;
+  }
+
+  .additional-products__name-card {
+
+  }
+
+  }
