--- a/source/less/catalog-product-cards.less
+++ b/source/less/catalog-product-cards.less
@@ -46,3 +46,16 @@
     padding: 0;
   }
 }
+
+@media (min-width: @desktop-width) {
+  .catalog-product-cards__wrapper {
+    padding: 75px 110px;
+  }
+
+  .catalog-product-cards__list {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-row-gap: 143px;
+    grid-column-gap: 80px;
+  }
+}
