--- a/source/less/comment.less
+++ b/source/less/comment.less
@@ -21,3 +21,26 @@
   width: 100%;
   height: auto;
 }
+
+@media (min-width: @tablet-width) {
+  .comment__title {
+    margin-bottom: 75px;
+    font-size: 36px;
+    line-height: 36px;
+  }
+
+  .comment__skill-cat-form {
+    font-size: 20px;
+    line-height: 30px;
+    padding: 10px 19px;
+    margin-bottom: 65px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .comment__skill-cat-form {
+    margin-bottom: 67px;
+  }
+
+}
+
