--- a/source/less/program-selection.less
+++ b/source/less/program-selection.less
@@ -27,3 +27,31 @@
   margin: 0;
   margin-top: 39px;
 }
+
+@media (min-width: @tablet-width) {
+  .program-selection__wrapper {
+    padding: 75px 70px;
+  }
+
+  .program-selection__title {
+    font-size: 60px;
+    line-height: 60px;
+  }
+
+  .program-selection__subtitle {
+    font-size: 20px;
+    line-height: 30px;
+    margin-top: 54px;
+  }
+
+  .program-selection__questionnaire {
+    margin: 0;
+    margin-top: 39px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .program-selection__wrapper {
+    padding: 85px 110px;
+  }
+}
