--- a/source/less/questionnaire.less
+++ b/source/less/questionnaire.less
@@ -1,7 +1,4 @@
 .questionnaire__cat-data {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
   margin-bottom: 24px;
 }
 
@@ -44,3 +41,72 @@
   text-align: center;
   color: @black;
 }
+
+@media (min-width: @tablet-width) {
+  .questionnaire__contact {
+    padding: 76px 0 65px 0;
+  }
+
+  .questionnaire__send-form {
+    font-size: 20px;
+    line-height: 0px;
+    width: 282px;
+  }
+
+  .questionnaire__required-form {
+    font-size: 16px;
+    line-height: 16px;
+    margin-left: 60px;
+  }
+
+  .questionnaire__send {
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .questionnaire {
+    display: grid;
+    margin-top: 66px;
+  }
+
+  .questionnaire__cat-data {
+    margin-bottom: 70px;
+  }
+
+  .questionnaire__contact {
+    padding: 0;
+    grid-row: 2;
+    grid-column: 1/3;
+  }
+
+  .questionnaire__comment {
+    padding: 0;
+    grid-row: 3;
+    grid-column: 1/3;
+  }
+
+  .questionnaire__additionally {
+    padding: 0;
+    grid-row: 4;
+    grid-column: 1/3;
+    margin-bottom: 60px;
+  }
+
+  .questionnaire__send {
+    padding: 0;
+    grid-row: 5;
+    grid-column: 1/3;
+  }
+
+  .questionnaire__send-form {
+    min-width: 568px;
+    min-height: 52px;
+  }
+
+  .questionnaire__required-form {
+    margin-left: 80px;
+  }
+}
+
